# ChangeLog for dev-util/lv2-c++-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -lv2-c++-tools-1.0.2.ebuild, lv2-c++-tools-1.0.4.ebuild, metadata.xml:
  Deleted old ebuild. Move to EAPI 5. Cleanup. Removed no-herd from
  metadata.xml

*lv2-c++-tools-1.0.4 (03 Mar 2011)

  03 Mar 2011; Frieder Buerzele <evermind@tuxfamily.org>
  -lv2-c++-tools-1.0.3.ebuild, +lv2-c++-tools-1.0.4.ebuild:
  version bump

*lv2-c++-tools-1.0.3 (30 Mar 2010)

  30 Mar 2010; Viktor Lazarev <taurus101v@gmail.com>
  +lv2-c++-tools-1.0.3.ebuild:
  version bump
  +metadata.xml

  17 Dec 2008; Thomas Kuther <gimpel@sonnenkinder.org>
  +lv2-c++-tools-1.0.2.ebuild:
  initial ebuild
