@@ -1,4 +1,6 @@
 DIST lv2-c++-tools-1.0.4.tar.bz2 75077 SHA256 ab9e57e764807b88425ce7305cea1382fddaeb262254a04aa12c64de93e67e6f SHA512 4b5536d82305e8f65d6d5f2a345a039b969a66cc54987f312b69286d0dc15a86c15d95b087aec752b3b76833b7ceb4d902f545b8ce90ca82714b51f5e02d54e3 WHIRLPOOL 0401e7afc54272bce4b2668ec2f86df1d90687c53ba593fd1103696bf701123c2b5d4474105d5963fd7281c8e0989499ba7f9cffc48eac668026a0719d2d6422
+DIST lv2-c++-tools-1.0.5.tar.bz2 76403 SHA256 6ce16a51a37259a45d8a7a59f39a6c36fc09b4c700dd26244a9dada241864e3b SHA512 29d9c4ac4e030ada6105b69768b695b4378f06902ff0ae6c2ed58aebafba891e8ee77a643c78d17a5fc9f9ea8394cc0997f7b4f499ee6d5d1adc7042db50cd0c WHIRLPOOL 850aac8075ea0ad0a35be8edc24ce54b0d552c028d5a5bdd0e0c8e1893667059d3f6f3621853ecd2bf220bad7e48af18c4cf2c61d9bcaa32f9c3867ae0ae5fbc
 EBUILD lv2-c++-tools-1.0.4.ebuild 841 SHA256 76c7dda754246fbc183773508cb132b6fa2ecd6197e2c080ba7153c06f140e9f SHA512 727c225f52a502554f57908df04fdc93a84b8c8cd5461ddde5ead55d9ddba997586f15b1cbdfad64d788f4632e118bf03b3041ed1ec6d791f31f85e54254d5e4 WHIRLPOOL b8f24ad6bd67fd55d7a802d802e2d37baa0b84fdb256bb8c71f76b53210eba33d75134b72ea87365796e847c25b1f420d3aea76a0ef0cb788ccd6b4f189f0546
-MISC ChangeLog 770 SHA256 97bf4e4c233e6a6de6b2ecb0bee8eab3cc9e7be57555cd0d61cb5d47b6a73c3e SHA512 c6233b076a3f9156a91ba0352d4e37162132dce4cfc5d287686f76be7a42f1ce441213487ce5c0f1b5b580d3584b906d22c8ce5d7eba841bad4a54f472d40b11 WHIRLPOOL fd3e8e17a9d4677416eb0ade12c9ebe4cd55a01957363fe4995049b78e91160206dbde8c0629b6de9c65865e135f15ee433379742ce1e9c5a7a9ecfdb386fe27
+EBUILD lv2-c++-tools-1.0.5.ebuild 918 SHA256 73aef73bc19b441a2da29258b07233cddaacaf9bb4df1a2a16c46b61957cde6a SHA512 eb790a53991c2d68c5730dbcbfaf1cdaaab1bb0bec00b921431c8463110b1d01fce18f32cec1dc0809993258d981a12ba1af7957c8b52079a919370b9f31f53e WHIRLPOOL 981fefb822d687639cf8064a0a4eb4c0760291511b54cfc140c3bc36efcf09b04e548c97a4c366fb29c72545b8b7fbda4dc59867b542177bedc08ae0cd3eb119
+MISC ChangeLog 984 SHA256 3d115807015f1b4940c3a136a42297e29760a8ec7ecbda66d59a969b9bceb390 SHA512 5a263798bb629ec22a0eef595870ffdf67f5b4c9fafa2911f15035b222341103621c26b91fb17211c623616b51b585bdab18dc2be45f74bc8bc139a618a6043d WHIRLPOOL 358d68c93e85efe86bbbb4c29a54bf50ad9e33b6e0b7fcc40405e22b843273172563f1770564be6b6ce0be47cc24d257aaef3cd1754c11d9e0f90f0cf056df06
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
